More minor fixes

--- a/client/dev/partials/projects/logical-frame-indicator-selector.html
+++ b/client/dev/partials/projects/logical-frame-indicator-selector.html
@@ -19,7 +19,7 @@
 
 			<i class="fa fa-external-link fa-fw"
 				ng-if="project.themes.indexOf(theme._id) === -1"
-				tooltip="{{'indicator.is_mandatory'|translate}}"
+				tooltip="{{'indicator.is_external'|translate}}"
 				tooltip-placement="right"></i>
 			
 			<span style="overflow: hidden;">{{indicator.name}}</span>
