--- a/client/dev/partials/projects/logical-frame-indicator-selector.html
+++ b/client/dev/partials/projects/logical-frame-indicator-selector.html
@@ -7,6 +7,16 @@
 		</div>
 
 		<div class="indicator-level-3" ng-repeat="indicator in type.children | orderBy:orderField" ng-if="type.open">
+			<span class="pull-right">
+				{{indicator.__mainUsage}} <i class="fa fa-building-o"></i>
+				{{indicator.__inputUsage}} <i class="fa fa-pencil-square-o"></i>
+
+				<a class="btn btn-xs btn-default"
+					ng-click="choose(indicator._id)"
+					ng-disabled="forbidden.indexOf(indicator._id) !== -1"
+					translate="shared.choose"></a>
+			</span>
+
 			<i class="fa fa-question fa-fw"
 				ng-if="project.themes.indexOf(theme._id) !== -1 && indicator.operation == 'common'"
 				tooltip="{{'indicator.is_common'|translate}}"
@@ -21,22 +31,8 @@
 				ng-if="project.themes.indexOf(theme._id) === -1"
 				tooltip="{{'indicator.is_external'|translate}}"
 				tooltip-placement="right"></i>
-			
-			<span style="overflow: hidden;">{{indicator.name}}</span>
 
-			<span class="pull-right" style="display: inline-block; width: 180px; position: relative; top: -3px">
-				<a class="btn btn-xs btn-default"
-				   ng-click="choose(indicator._id)"
-				   ng-disabled="forbidden.indexOf(indicator._id) !== -1"
-				   translate="shared.choose"></a>
-			</span>
-
-			<span class="pull-right">
-				<span style="display: inline-block; width: 40px; text-align: right">{{indicator.__mainUsage}} <i class="fa fa-building-o"></i></span>
-				<span style="display: inline-block; width: 50px; text-align: right">{{indicator.__inputUsage}} <i class="fa fa-pencil-square-o"></i></span>
-			</span>
-
-			<div style="clear: both"></div>
+			{{indicator.name}}
 		</div>
 	</div>
 </script>
@@ -69,11 +65,12 @@
 	<div ng-if="!showAllIndicators">
 		<div ng-if="project.themes.length == 1">
 			<div style="margin-left: -40px"
-				 ng-include="'indicator_tree.html'"
-				 ng-repeat="theme in hierarchy"
-				 ng-if="theme._id === project.themes[0]"
- 				 ng-init="theme.open = true"></div>
+				ng-include="'indicator_tree.html'"
+				ng-repeat="theme in hierarchy"
+				ng-if="theme._id === project.themes[0]"
+ 				ng-init="theme.open = true"></div>
 		</div>
+
 		<div ng-if="project.themes.length != 1">
 			<div class="indicator-level-1" ng-repeat="theme in hierarchy" ng-if="project.themes.indexOf(theme._id) !== -1">
 				<div class="indicator-header" ng-click="theme.open=!theme.open">
