--- a/client/dev/partials/projects/logical-frame-indicator-edition.html
+++ b/client/dev/partials/projects/logical-frame-indicator-edition.html
@@ -130,9 +130,9 @@
 		<span translate="shared.edit"></span>
 	</button>
 
-	<button ng-click="delete()" class="btn btn-danger" ng-if="!isNew" acl-has-project-role="owner">
+	<button ng-click="delete()" class="btn btn-danger" ng-if="!isNew" acl-has-project-role="owner" ng-disabled="!isDeletable">
 		<i class="fa fa-remove"></i>
-		<span translate="shared.delete">
+		<span translate="shared.delete"></span>
 	</button>
 
 	<button ng-click="cancel()" class="btn btn-default">
