--- a/client/dev/partials/projects/user-list.html
+++ b/client/dev/partials/projects/user-list.html
@@ -8,24 +8,31 @@
 
 	<div class="form-group">
 		<label for="input-owner" class="col-sm-2 control-label" translate="project.owners"></label>
-		<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="project.owners|join:', '">
-			<ui-select multiple ng-model="project.owners" theme="bootstrap" required>
-				<ui-select-match placeholder="">{{$item}}</ui-select-match>
-				<ui-select-choices repeat="user in users">{{user}}</ui-select-choices>
+		<div class="col-sm-10">
+			<ui-select multiple ng-model="project.owners" theme="bootstrap" required acl-has-project-role="owner">
+				<ui-select-match placeholder="">{{$item.name}}</ui-select-match>
+				<ui-select-choices repeat="user._id as user in users">{{user.name}}</ui-select-choices>
 			</ui-select>
+
+			<span acl-lacks-project-role="owner">
+				{{project.owners | getObjects:users | pluck:'name' | join:', '}}
+			</span>
 		</div>
 	</div>
 
 	<div class="form-group">
 		<label for="input-input" class="col-sm-2 control-label" translate="project.dataEntryOperators"></label>
-		<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="project.dataEntryOperators|join:', '">
-			<ui-select multiple ng-model="project.dataEntryOperators" theme="bootstrap" required>
-				<ui-select-match placeholder="">{{$item}}</ui-select-match>
-				<ui-select-choices repeat="user in users">{{user}}</ui-select-choices>
+		<div class="col-sm-10">
+			<ui-select multiple ng-model="project.dataEntryOperators" theme="bootstrap" required acl-has-project-role="owner">
+				<ui-select-match placeholder="">{{$item.name}}</ui-select-match>
+				<ui-select-choices repeat="user._id as user in users">{{user.name}}</ui-select-choices>
 			</ui-select>
+
+			<span acl-lacks-project-role="owner">
+				{{project.dataEntryOperators | getObjects:users | pluck:'name' | join:', '}}
+			</span>
 		</div>
 	</div>
-
 
 	<div acl-has-project-role="owner">
 		<button ng-click="save()" ng-disabled="project.owners.length == 0 || isUnchanged()" class="btn btn-primary">
