--- a/client/dev/partials/projects/form-list.html
+++ b/client/dev/partials/projects/form-list.html
@@ -9,8 +9,8 @@
 <table class="table table-bordered table-condensed" ng-if="project.dataCollection.length != 0">
 	<thead>
 		<tr>
-			<td></td>
-			<td ng-repeat="interval in intervals">{{interval}}</td>
+			<th translate="shared.indicator"></th>
+			<th ng-repeat="interval in intervals">{{interval}}</th>
 		</tr>
 	</thead>
 	<tbody>
