--- a/client/dev/partials/projects/logical-frame.html
+++ b/client/dev/partials/projects/logical-frame.html
@@ -1,10 +1,41 @@
-<ol class="breadcrumb">
+<!-- <table class="table table-bordered table-stripped ">
+	<thead>
+		<tr>
+			<th>What</th>
+			<th colspan="2">How Much</th>
+			<th colspan="4">When</th>
+			<th>How</th>
+			<th>Where</th>
+			<th colspan="2">Who</th>
+			<th>Why</th>
+		</tr>
+		<tr>
+			<th>Consolidated list of Indicators</th>
+			<th>Baseline</th>
+			<th>Target</th>
+			<th>M</th>
+			<th>Q</th>
+			<th>A</th>
+			<th>O</th>
+			<th>Calculation of indicator</th>
+			<th>Sources of verification</th>
+			<th>Data collection</th>
+			<th>Data analysis</th>
+			<th>Pertinence</th>
+		</tr>
+	</thead>
+	<tbody>
+		
+	</tbody>
+</table> -->
+
+<ol class="breadcrumb noprint">
 	<li><a ui-sref="main.projects" translate="shared.projects"></a></li>
 	<li class="active">{{project.name}}</li>
 	<li class="active" translate="shared.logical_frame"></li>
 </ol>
 
-<form class="form-horizontal" role="form" name="projectForm" novalidate>
+<form class="form-horizontal noprint" role="form" name="projectForm" novalidate>
 	<fieldset>
 		<legend translate="project.general_data"></legend>
 
