--- a/client/dev/partials/projects/menu.html
+++ b/client/dev/partials/projects/menu.html
@@ -1,5 +1,5 @@
 <div class="row">
-	<div class="col-md-2">
+	<div class="col-md-2 noprint">
 		<ul class="nav nav-pills nav-stacked" ng-if="project._id">
 			<li ui-sref-active="active">
 				<a ui-sref="main.project.logical_frame({projectId: project._id})"
