--- a/client/dev/partials/projects/logical-frame-indicator-edition.html
+++ b/client/dev/partials/projects/logical-frame-indicator-edition.html
@@ -24,6 +24,22 @@
 		</div>
 
 		<div class="form-group" show-errors>
+			<label for="source-input" class="col-sm-2 control-label" translate="project.source"></label>
+			<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="planning.source">
+				<input class="form-control" id="source-input" name="source" ng-model="planning.source" placeholder="{{'project.source_ph'|translate}}" required />
+				<p class="help-block" ng-if="planningForm.source.$error.required" translate="form.mandatory"></p>
+			</div>
+		</div>
+
+		<div class="form-group" show-errors>
+			<label for="in-charge-input" class="col-sm-2 control-label" translate="project.in_charge"></label>
+			<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="planning.inCharge">
+				<input class="form-control" id="in-charge-input" name="inCharge" ng-model="planning.inCharge" placeholder="{{'project.in_charge_ph'|translate}}" required />
+				<p class="help-block" ng-if="planningForm.inCharge.$error.required" translate="form.mandatory"></p>
+			</div>
+		</div>
+
+		<div class="form-group" show-errors>
 			<label for="baseline-input" class="col-sm-2 control-label" translate="project.baseline"></label>
 			<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="planning.baseline">
 				<div class="input-group">
