--- a/client/dev/partials/menu.html
+++ b/client/dev/partials/menu.html
@@ -67,4 +67,4 @@
 </nav>
 
 
-<div class="container-fluid" ui-view style="padding-top: 70px;"></div>
+<div class="container-fluid main-content" ui-view></div>
