--- a/client/dev/partials/projects/logical-frame.html
+++ b/client/dev/partials/projects/logical-frame.html
@@ -1,4 +1,4 @@
-<!-- <table class="table table-bordered table-stripped ">
+<!-- <table class="table table-bordered table-stripped print-only">
 	<thead>
 		<tr>
 			<th>What</th>
